maj de ébulittion

--- a/css/main.css
+++ b/css/main.css
@@ -640,7 +640,7 @@ footer p {
 }
 
 #all-projects .project .text .title {
-  font-family: "AlteGrotesk", sans-serif;
+  font-family: "AlteGroteskBold", sans-serif;
   font-size: 40px;
   font-weight: 600;
   color: black;
