--- a/css/main.css
+++ b/css/main.css
@@ -394,13 +394,25 @@ footer p {
 
 .span-competence {
   position: absolute;
-  color: white;
+  color: rgb(255, 255, 255);
   border: 1px solid white;
   margin: 0 0 0.5rem 1rem;
   padding: 0.5rem 1rem;
   border-radius: 100px;
   z-index: 3;
   bottom: 0;
+  transition:  0.4s;
+}
+.span-competence-projects {
+  position: absolute;
+  color: rgb(255, 255, 255);
+  border: 1px solid rgb(255, 255, 255);
+  margin: 0 0 0.5rem 1rem;
+  padding: 0.5rem 1rem;
+  border-radius: 100px;
+  z-index: 3;
+  bottom: 0;
+  transition:  0.4s;
 }
 
 #projects .card,
@@ -415,7 +427,7 @@ footer p {
 
 #projects .card:hover,
 #photos .card:hover {
-  filter: grayscale(0%);
+  filter: grayscale(30%);
 }
 
 #projects .card p,
@@ -450,7 +462,7 @@ footer p {
   bottom: 0;
   width: 100%;
   height: 30%;
-  background: black;
+  background: rgb(0, 0, 0);
   transform: translateY(100%);
 
 }
