--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: black;
+  background-color: rgb(148, 148, 148);
   border: 0.25rem solid white;
   border-radius: 1rem;
 }
@@ -180,7 +180,7 @@ header nav a::after {
   width: 100%;
   border-bottom-left-radius: 1.5rem;
   border-bottom-right-radius: 1.5rem;
-  background: black;
+  background: rgb(30, 30, 30)
 }
 
 header nav a:hover {
@@ -426,13 +426,13 @@ footer p {
   flex-grow: 1;
   border-radius: 2rem;
   overflow: hidden;
-  filter: grayscale(100%);
+  filter: grayscale(90%);
   transition: filter 0.4s;
 }
 
 #projects .card:hover,
 #photos .card:hover {
-  filter: grayscale(30%);
+  filter: grayscale(10%);
 }
 
 #projects .card p,
@@ -466,8 +466,8 @@ footer p {
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 30%;
-  background: rgb(0, 0, 0);
+  height: 0%;
+  background: rgb(255, 0, 0);
   transform: translateY(100%);
 
 }
