--- a/css/main.css
+++ b/css/main.css
@@ -493,8 +493,8 @@ footer p {
   background-size: cover;
 }
 
-#card-musba {
-  background-image: url("../images/miniatures/miniature-refonte-musba.webp");
+#card-ordre {
+  background-image: url("../images/miniatures/minitiature-lordre.webp");
   background-size: cover;
 }
 
