--- a/css/main.css
+++ b/css/main.css
@@ -467,7 +467,7 @@ footer p {
   bottom: 0;
   width: 100%;
   height: 0%;
-  background: rgb(255, 0, 0);
+  background: rgba(255, 0, 0, 0);
   transform: translateY(100%);
 
 }
